--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,8 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
+  flutter: '>=2.0.0'
 
 dependencies:
   flutter:
@@ -24,7 +25,9 @@ dependencies:
     path: ../
 
   transformer_page_view:
-    path: /Users/jzoom/SourceCode/transformer_page_view
+    git:
+      url: https://github.com/ritch2023/transformer_page_view.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
